# Matrix_calculator

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  Matrix-calculator.sln  Matrix_calculator.sln  Matrix_calculator.vcxproj  Matrix_calculator.vcxproj.filters  README.md  ast-exec.c  ast-tree.c  ast.h  ast_jit.c  ast_jit.h  autogen.sh  config.h  config.h.in  configure  configure.ac  configure.scan  lex.c  lex.l  main.c  makefile  mem_pool.c  mem_pool.h  myprintf.c  myprintf.h  mystring.h  packages.config  parser.c  parser.h  parser.y  syms.c  syms.h  types.h
GUI/: CMakeLists.txt  GUI.vcxproj  GUI.vcxproj.filters  Translate_en.qm  Translate_en.ts  Translate_zh_CN.qm  Translate_zh_CN.ts  cmake_install.cmake  main_GUI.c  mainwindow.cpp  mainwindow.h  mainwindow.ui  matrixeditor.cpp  matrixeditor.h  matrixeditor.ui  myexprtk.cpp  myexprtk.h
GUI/icon/: Readme
demo/: .clang-format  README.md  cli.c  cli.h  demo.c  demo.h  demo.vcxproj  demo.vcxproj.filters  errorf.c  errorf.h  hash.c  hash.h  main.c  matrix.c  matrix.h  regex.c  regex.h  test.c
doc/: MatCal.texi  local.mk  parser.html  parser.xml  version.texi
src/: .clang-format  Makefile.am  Makefile.in  README.md  calculator.c  cli.c  cli.h  config.h  demo.vcxproj  demo.vcxproj.filters  errorf.c  hash.c  lex.l  main.c  main.h  matrix.c  matrix.h  mian.c  parser.output  parser.y  regex.c  report.txt  src.vcxproj  src.vcxproj.filters  syms.c  syms.h  system.h  test.txt
test/: 100x100  Transpose  a  a.txt  numbers
